Fixing spacing on Page component with no header

--- a/src/components/Page/Page.scss
+++ b/src/components/Page/Page.scss
@@ -34,11 +34,15 @@ html, body {
 }
 
 .Content {
-  margin: 0 0 spacing(loose);
+  margin: spacing(loose) 0;
+
+  @include page-content-when-not-partially-condensed {
+    margin-top: spacing(extra-loose);
+  }
 }
 
 .Header {
-  padding: spacing(loose);
+  padding: spacing(loose) spacing(loose) 0;
 
   @include page-content-when-not-fully-condensed {
     padding-left: 0;
@@ -47,7 +51,6 @@ html, body {
 
   @include page-content-when-not-partially-condensed {
     padding-top: spacing(extra-loose);
-    padding-bottom: spacing(extra-loose);
   }
 }
 
